--- a/tests/test_rust/code/makefile
+++ b/tests/test_rust/code/makefile
@@ -1,6 +1,8 @@
-all: code
-code: main.rs
+all: code  
+crate2: crate2.rs
 	$(RUST) $< -o $@
+code: main.rs crate2
+	$(RUST) -L$(@D) $< -o $@
 clean:
 	rm -rf code
 
