--- a/tests/test_rust/dxr.config.in
+++ b/tests/test_rust/dxr.config.in
@@ -1,5 +1,6 @@
 [DXR]
 enabled_plugins     = pygmentize clang rust
+disabled_plugins    = ""
 temp_folder         = PWD/temp
 target_folder       = PWD/target
 nb_jobs             = 4
