--- a/tests/test_basic/dxr.config
+++ b/tests/test_basic/dxr.config
@@ -3,6 +3,7 @@ enabled_plugins     = pygmentize clang
 es_index            = dxr_test_{format}_{tree}_{unique}
 es_alias            = dxr_test_{format}_{tree}
 es_catalog_index    = dxr_test_catalog
+workers = 0
 
 [code]
 source_folder       = code
