--- a/requirements.txt
+++ b/requirements.txt
@@ -69,3 +69,5 @@ requests==1.2.3
 
 # sha256: rUar6kB6nbKhCxgUh53YtF7Zxb5XqGPRnKv2Od6rIWE
 https://bitbucket.org/pelmers/python-hglib/get/issue3924-version-fix.tar.gz#egg=python-hglib
+
+ply==3.6
