--- a/dxr/plugins/xpidl/tests/test_smoke/dxr.config
+++ b/dxr/plugins/xpidl/tests/test_smoke/dxr.config
@@ -3,10 +3,11 @@ enabled_plugins     = pygmentize xpidl
 disabled_plugins    = clang
 es_index            = dxr_{format}_{tree}_{unique}
 es_alias            = dxr_{format}_{tree}
+workers = 0
 
 [code]
 source_folder=code
 object_folder=code/obj
-#build_command=make clean; make -j $jobs
 build_command=
+clean_command=
 
