Add some links.
WIP: use header.py to get the right line number anchors.
Add a plugin config options to find directories for things.

--- a/dxr/plugins/xpidl/tests/test_smoke/dxr.config
+++ b/dxr/plugins/xpidl/tests/test_smoke/dxr.config
@@ -8,6 +8,6 @@ workers = 0
 [code]
 source_folder=code
 object_folder=code/obj
-build_command=
-clean_command=
+build_command=cd $source_folder && make
+clean_command=cd .. && make clean
 
