Add options to control include dirs, header bucket location.

--- a/dxr/plugins/xpidl/tests/test_smoke/dxr.config
+++ b/dxr/plugins/xpidl/tests/test_smoke/dxr.config
@@ -11,3 +11,6 @@ object_folder=code/obj
 build_command=cd $source_folder && make
 clean_command=cd .. && make clean
 
+  [[xpidl]]
+  header_bucket=code/obj/dist/include
+  include_folders=code/base
