--- a/dxr/plugins/xpidl/tests/test_menus_and_filters/dxr.config
+++ b/dxr/plugins/xpidl/tests/test_menus_and_filters/dxr.config
@@ -3,7 +3,6 @@ enabled_plugins     = pygmentize xpidl
 disabled_plugins    = clang
 es_index            = dxr_{format}_{tree}_{unique}
 es_alias            = dxr_{format}_{tree}
-workers = 4
 
 [code]
 source_folder=code
@@ -12,5 +11,4 @@ build_command=cd $source_folder && make
 clean_command=cd .. && make clean
 
   [[xpidl]]
-  header_bucket=code/obj/dist/include
-  include_folders=code/base
+  header_bucket=code/obj
